// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`клик на крест / пункт меню local storage если ls не пустой, но элемента нет, добавит его туда 1`] = `
Array [
  Object {
    "is_hidden": true,
    "offerId": "another-offer-id",
    "ts": 1589846400000,
  },
  Object {
    "is_hidden": true,
    "key": "offer-id",
    "ts": 1589932800000,
  },
]
`;

exports[`клик на крест / пункт меню local storage если ls переполнен и все данные свежие, оставит в нем не больше лимита и новый элемент 1`] = `
Object {
  "is_hidden": true,
  "key": "offer-id",
  "ts": 1589932800000,
}
`;

exports[`клик на крест / пункт меню local storage если ls переполнен, почистить его при добавлении 1`] = `
Array [
  Object {
    "is_hidden": true,
    "offerId": "newer-offer-id",
    "ts": 1589328000000,
  },
  Object {
    "is_hidden": true,
    "key": "offer-id",
    "ts": 1589932800000,
  },
]
`;

exports[`клик на крест / пункт меню local storage если ls пустой, добавит первый элемент 1`] = `
Array [
  "autoru_ls_key",
  "[{\\"key\\":\\"offer-id\\",\\"is_hidden\\":true,\\"ts\\":1589932800000}]",
]
`;

exports[`клик на крест / пункт меню отправляет метрику 1`] = `
Array [
  Array [
    "chat_widgets",
    "metrika-name",
    "close",
    "vin",
  ],
]
`;
